[interruptible-eval] Improve error message if JVMTI agent cannot not be loaded